# summarena

./: .gitignore
.github/workflows/: website.yaml
email-ingestion/: Cargo.toml  README.md
email-ingestion/src/: database.rs  email_ingester.rs  lib.rs
email-ingestion/tests/: gmail_manual_test.rs  greenmail_helper.rs  greenmail_integration_test.rs
email-ingestion/tests/common/: mod.rs
interfaces/: .gitignore  Cargo.toml  init_db.sh
interfaces/migrations/: 1_structures.sql
interfaces/src/: baseline.rs  defs.rs  empty.rs  lib.rs  main.rs  state.rs
rss-aggregator/: Cargo.toml  Makefile  README.md
rss-aggregator/migrations/: 001_initial.sql
rss-aggregator/src/: aggregator.rs  digest.rs  feed_manager.rs  fetcher.rs  lib.rs  llm_adapter.rs  main.rs  parser.rs  pipeline.rs  processing.rs  rss_utils.rs  state.rs  traits.rs  types.rs  user_manager.rs  utils.rs
rss-aggregator/src/aggregators/: mod.rs  time_bucket.rs
rss-aggregator/src/sources/: mod.rs  rss_feed.rs  wsj_feed.rs
rss-aggregator/tests/: integration_test.rs  modular_test.rs  rss_sources_test.rs
src/: baseline.rs
website/: .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  TEST_GUIDE.md  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  vitest.config.ts  wrangler.toml
website/e2e/: analytics-interactions.spec.ts  blog.spec.ts  email-collection.spec.ts  homepage.spec.ts  mobile-behavior.spec.ts  routing.spec.ts
website/functions/api/: subscribe.ts
website/public/: README-assets.md  current-digest.html  hero-fixed.html  hero-safe.html  umami.js
website/src/: content.config.ts
website/src/components/: BaseHead.astro  Footer.astro  (+2 more)
website/tests/: pages.test.ts
(+19 files in other folders)
