[package]
name = "email-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Email handling
imap = "2.4"
lettre = "0.11"
mail-parser = "0.9"
native-tls = "0.2"

# Database
tokio-postgres = "0.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Interface dependencies
interfaces = { path = "../interfaces" }

# URL parsing
url = "2.5"

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }