[package]
name = "rss-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# interfaces = { path = "../interfaces" }  # Commented out for simple demo
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "brotli"] }
feed-rs = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# robotstxt = "0.3" # Simplified for now
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "migrate"] }
backoff = "0.4"
clap = { version = "4.0", features = ["derive"] }
